--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles/styles.css">
-</head> 
-<body>  
+
+</head>
+
+<body>
     <header>
+        <nav>
+            <h3 class="nav-title">Neo<span class="text-primary">w</span>az</h3>
+            <ul>
+                <li><a href="">portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><Button class="primary-button">Hire Me</Button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div>
+                <h3>Hi, I am</h3>
+                <h1>Neowaz Emon</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                <button class="primary-button">Download Cv</button>
+                <button class="primary-button">contact</button>
+            </div>
+            <img class="profil-pic" src="images/hardy.png" alt="">
+        </div>
+        
 
     </header>
     <main>
@@ -16,6 +39,7 @@
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
