--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </ul>
         </nav>
         <div class="banner">
-            <div>
-                <h3>Hi, I am</h3>
-                <h1>Neowaz Emon</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+            <div class="banner-content">
+                <h3 class="banner-greeding">Hi, I am</h3>
+                <h1 class="banner-title">Neowaz Emon</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.</p>
                 <button class="primary-button">Download Cv</button>
                 <button class="primary-button">contact</button>
